<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeskripsiPaketAct">

    <ScrollView
        android:id="@+id/utama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Title-->
            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="18dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psemibold"
                    android:paddingLeft="18dp"
                    android:paddingRight="24dp"
                    android:text="Deskripsi Paket"
                    android:textAlignment="center"
                    android:textColor="@color/hitamPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <!--Paket-->
            <LinearLayout
                android:id="@+id/card_paket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <!--Card Paket-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:elevation="32dp"
                    android:gravity="center"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/thumbnail_paket"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_overlay_card" />

                    <LinearLayout
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_weight="2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/nama_paket"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:fontFamily="@font/pmedium"
                                android:textSize="16sp"
                                android:textColor="@color/putihPrimary"/>

                            <!--Price-->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Rp"
                                    android:fontFamily="@font/pregular"
                                    android:textSize="14sp"
                                    android:textColor="@color/putihPrimary"/>

                                <TextView
                                    android:id="@+id/harga_paket"
                                    android:layout_marginLeft="4dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:fontFamily="@font/pregular"
                                    android:textSize="14sp"
                                    android:textColor="@color/putihPrimary"/>
                            </LinearLayout>

                        </LinearLayout>

                        <!--Rating-->
                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/ic_kamera"/>

                            <TextView
                                android:id="@+id/jml_org"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:text=""
                                android:fontFamily="@font/pmedium"
                                android:textSize="12sp"
                                android:textColor="@color/putihPrimary"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--Deskripsi Paket-->
            <LinearLayout
                android:id="@+id/desc_paket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_paket">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psemibold"
                    android:text="Deskripsi"
                    android:textColor="@color/hitamPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/deskripsi_paket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/pregular"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/desc_paket"
                    android:textColor="@color/hitamPrimary"
                    android:textSize="14sp" />


            </LinearLayout>

            <!--Divider-->
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/abuIcon"
                app:layout_constraintTop_toBottomOf="@+id/desc_paket" />

            <!--Deskripsi Extras-->
            <LinearLayout
                android:id="@+id/extras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/psemibold"
                    android:text="Extras"
                    android:textColor="@color/hitamPrimary"
                    android:textSize="18sp" />
                
                <!--Extras:Tambahan-->
                <LinearLayout
                    android:id="@+id/extras_tambahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psemibold"
                        android:text="Tambahan :"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/extras_tambahan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/pregular"
                        android:text="@string/extras_tambahan"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--Extras:Cetak-->
                <LinearLayout
                    android:id="@+id/extras_cetak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psemibold"
                        android:text="Cetak :"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/extras_cetak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/pregular"
                        android:text="@string/extras_cetak"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--Extras:Edit-->
                <LinearLayout
                    android:id="@+id/extras_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/psemibold"
                        android:text="Edit :"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/extras_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/pregular"
                        android:text="@string/extras_edit"
                        android:textColor="@color/hitamPrimary"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <!--Button Booking-->
            <Button
                android:id="@+id/btn_booking"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/psemibold"
                android:text="Booking Sekarang"
                android:textAllCaps="false"
                android:textColor="@color/putihPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extras" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>